--- a/index.html
+++ b/index.html
@@ -1,135 +1,129 @@
 <html>
-<head>
+  <head>
+    <!-- BOOTSTRAP -->
 
-<style>
-<!--
-a{text-decoration:none}
-//-->
-</style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-<style>
-<!--
-a:hover{color:001adb;
-//-->
-</style>
+    <style>
+      .img-fluid {
+        max-height: 120px;
+        padding: 5%;
+      }
 
-<title>MMDCT - Money Makes Dreams Come True</title>
+      .imgFlex {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .middleSection {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #e6e6e6;
+      }
+      .header {
+        margin-top: 50px;
+        margin-bottom: 20px;
+      }
+      .brandContainer {
+        margin-bottom: 50px;
+      }
+      .display-4 {
+        font-size: 2rem;
+        width: 100%;
+      }
+      .container.footer {
+          margin-top: 40px;
+      }
+    </style>
 
-</head>
-<body bgcolor="#ffffff" topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0" link="#8f8f8f" vlink="#8f8f8f" alink="#8f8f8f">
+  <title>MMDCT - Money Makes Dreams Come True</title>
+  </head>
 
-<font face="Eras Demi ITC" size="1" color="#ffffff">
+  <body bgcolor="#ffffff">
+    <h4 class="text-center display-4 header">MYC Brands</h1>
+    <div class="container text-center brandContainer">
+      <div class="row imgFlex">
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <a href="http://www.mycgraphics.com"><img class="img-fluid" src="logos/mycgraphics.png" border="0"></a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <a href="http://www.marketyourcar.com"><img class="img-fluid" src="logos/marketyourcar.png" border="0"></a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <a href="http://www.pixter.ca"><img class="img-fluid" src="logos/pixter.png" border="0"></a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <a href="http://www.mycinteractive.com"><img class="img-fluid" src="logos/mycinteractive.png" border="0"></a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <a href="http://www.mycmedia.com"><img class="img-fluid" src="logos/mycmedia.png" border="0"></a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <a href="http://www.foodtruckwraps.ca"><img class="img-fluid" src="logos/ftw.png" border="0"></a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <a href="http://www.carwrapquotes.com"><img class="img-fluid" src="logos/cwq.png" border="0"></a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6">
+          <a href="http://projecttray.com"><img class="img-fluid" src="logos/projecttray.png" border="0"></a>
+        </div>
+      </div>
+    </div>
 
-<table align="center" width="1200" height="100%" border="0" cellspacing="0" cellpadding="0">
- <tr height="200">
-  <td colspan="4">
+    <section class="middleSection">
+      <div class="container">
+        <div class="row">
+          <h4 class="display-4">Useful Links:</h4>
+          <p>Esso: <a href="https://mycgraphics.com/wp-admin/" target="_blank">Login</a></p>
+        </div>
+      </div>
+    </section>
 
-
-
-
-
-<a href="http://www.mycgraphics.com"><img src="logos/mycgraphics.jpg" border="0"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-<a href="http://www.marketyourcar.com"><img src="logos/marketyourcar.jpg" border="0"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-<a href="http://www.pixter.ca"><img src="logos/pixter.jpg" border="0"></a>
-<hr>
-
-
-
-</td>
-</tr>
-<tr>
-<td>
-<br>
-
-</td>
-</tr>
-<tr valign="top">
-
-<td align="center">
-
-
-<font size="3" color="#070091">
-Websites
-</font>
-<hr width="200">
-<font size="2">
-
-<a href="https://mycdb.marketyourcar.com/v2/">MYC Database</a>
-<br>
-<a href="http://www.facebook.com/marketyourcar/">Facebook</a>
-<br>
-<a href="http://www.instagram.com/mycgraphics/">Instagram</a>
-<br>
-<a href="http://www.twitter.com/marketyourcar/">Twitter</a>
-
-
-
-
-
-</td>
-<td align="center">
-
-<font size="3" color="#070091">
-Media | Marketing
-</font>
-<hr width="200">
-<font size="2">
-<a href="http://www.mycgraphics.com/mktmedia/MYC-Catalogue.pdf">MYC Catalogue</a>
-<br>
-<a href="http://www.mycgraphics.com/mktmedia/MYC-Builder-Media-Kit.pdf">Builder Media Kit</a>
-<br>
-<a href="http://www.mycgraphics.com/mktmedia/3rd-Party-Vehicle-Marketing.pdf">3rd Party Vehicle Marketing</a>
-<br>
-<a href="http://www.mycgraphics.com/mktmedia/Vehicle-Care-Maintenance-Guidelines.pdf">Vehicle Care and Maintenance Guidelines</a>
-<br>
-<a href="http://www.mycgraphics.com/mktmedia/MYC-Graphics-Warranty.pdf">Graphics Warranry</a>
-
-
-
-
-</font>
-
-</td>
-<td align="center">
-
-<font size="3" color="#070091">
-Forms
-</font>
-<hr width="200">
-<font size="2">
-<a href="http://www.mycgraphics.com/mycforms/work-order.pdf">Work Order</a>
-<br>
-<a href="http://www.mycgraphics.com/mycforms/vehiclegraphics-creative-questioner.pdf">Vehicle Graphics Creative Questioneer</a>
-<br>
-<a href="http://www.mycgraphics.com/mycforms/mobile-advertising-questioner.pdf">Mobile Advertising Questioneer</a>
-<br>
-<a href="http://www.mycgraphics.com/mycforms/3rd-Party-Vehicle-Quarterly-Checklist.pdf">3rd Parth Vehicle Quartery Checklist</a>
-<br>
-<a href="http://www.mycgraphics.com/mycforms/vehicle-wrap-pricing.pdf">Vehicle Wrap Pricing</a>
-</font>
-
-</td>
-<td align="center">
-
-<font size="3" color="#070091">
-Bulletins
-</font>
-<hr width="200">
-<font size="2">
-<a href="http://www.mycgraphics.com/mycbulletins/3M-faq-vehicle-care.pdf">3M-Vehicle Care FAQ</a>
-<br>
-<a href="http://www.mycgraphics.com/mycbulletins/Bulletin-IJ180-IJ180c.pdf">Bulletin IJ180-IJ180c</a>
-<br>
-<a href="http://www.mycgraphics.com/mycbulletins/Bulletin-IJ8171.pdf">Bulletin IJ8171</a>
-
-
-
-</font>
-
-</td>
-</tr>      
-</table>
-
-</font>
-</body>
+    <div class="container footer">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <h4 class="display-4">Websites</h4>
+          <a href="https://mycdb.marketyourcar.com/v2/">MYC Database</a>
+          <br>
+          <a href="http://www.facebook.com/marketyourcar/">Facebook</a>
+          <br>
+          <a href="http://www.instagram.com/mycgraphics/">Instagram</a>
+          <br>
+          <a href="http://www.twitter.com/marketyourcar/">Twitter</a>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <h4 class="display-4">Media | Marketing</h4>
+          <a href="http://www.mycgraphics.com/mktmedia/MYC-Catalogue.pdf">MYC Catalogue</a>
+          <br>
+          <a href="http://www.mycgraphics.com/mktmedia/MYC-Builder-Media-Kit.pdf">Builder Media Kit</a>
+          <br>
+          <a href="http://www.mycgraphics.com/mktmedia/3rd-Party-Vehicle-Marketing.pdf">3rd Party Vehicle Marketing</a>
+          <br>
+          <a href="http://www.mycgraphics.com/mktmedia/Vehicle-Care-Maintenance-Guidelines.pdf">Vehicle Care and Maintenance Guidelines</a>
+          <br>
+          <a href="http://www.mycgraphics.com/mktmedia/MYC-Graphics-Warranty.pdf">Graphics Warranry</a>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <h4 class="display-4">Forms</h4>
+          <a href="http://www.mycgraphics.com/mycforms/work-order.pdf">Work Order</a>
+          <br>
+          <a href="http://www.mycgraphics.com/mycforms/vehiclegraphics-creative-questioner.pdf">Vehicle Graphics Creative Questioneer</a>
+          <br>
+          <a href="http://www.mycgraphics.com/mycforms/mobile-advertising-questioner.pdf">Mobile Advertising Questioneer</a>
+          <br>
+          <a href="http://www.mycgraphics.com/mycforms/3rd-Party-Vehicle-Quarterly-Checklist.pdf">3rd Parth Vehicle Quartery Checklist</a>
+          <br>
+          <a href="http://www.mycgraphics.com/mycforms/vehicle-wrap-pricing.pdf">Vehicle Wrap Pricing</a>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <h4 class="display-4">Bulletins</h4>
+          <a href="http://www.mycgraphics.com/mycbulletins/3M-faq-vehicle-care.pdf">3M-Vehicle Care FAQ</a>
+          <br>
+          <a href="http://www.mycgraphics.com/mycbulletins/Bulletin-IJ180-IJ180c.pdf">Bulletin IJ180-IJ180c</a>
+          <br>
+          <a href="http://www.mycgraphics.com/mycbulletins/Bulletin-IJ8171.pdf">Bulletin IJ8171</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
